[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/LSANS_dynamic_font_extra_large.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/SaveFile.gd" type="Script" id=2]
[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=3]

[node name="SaveFile" type="PanelContainer"]
margin_right = 151.0
margin_bottom = 102.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 147.0
margin_bottom = 98.0
custom_constants/separation = 2

[node name="PlayerName" type="Label" parent="VBoxContainer2"]
margin_right = 143.0
margin_bottom = 30.0
rect_min_size = Vector2( 97, 20 )
custom_fonts/font = ExtResource( 1 )
text = "Player Name"
align = 1
valign = 1

[node name="Currency" type="Label" parent="VBoxContainer2"]
margin_top = 32.0
margin_right = 143.0
margin_bottom = 62.0
rect_min_size = Vector2( 97, 20 )
custom_fonts/font = ExtResource( 1 )
text = "Currency"
align = 1
valign = 1

[node name="Score" type="Label" parent="VBoxContainer2"]
margin_top = 64.0
margin_right = 143.0
margin_bottom = 94.0
rect_min_size = Vector2( 97, 20 )
custom_fonts/font = ExtResource( 1 )
text = "Score"
align = 1
valign = 1

[connection signal="mouse_entered" from="." to="." method="_on_SaveFile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SaveFile_mouse_exited"]
